--- a/src/app.html
+++ b/src/app.html
@@ -10,10 +10,8 @@
 		<div style="display: contents">%sveltekit.body%</div>
     <script type="module">
       !(function () {
-        var currentColor = localStorage.getItem("currentColor") || '"neutral"';
-        var currentRadius = localStorage.getItem("currentRadius") || "0.5";
+        var currentColor = localStorage.getItem("theme") || '"neutral"';
         document.body.classList.add(`theme-${currentColor.slice(1, -1)}`);
-        document.body.style.setProperty("--radius", `${currentRadius}rem`);
       })();
     </script>
 	</body>
